# PomodoroCounter

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  default.nix  flake.nix  frontend.nix  licence  rust-toolchain.toml  rust.nix
.github/workflows/: frontend.yaml  rust.yaml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  LICENCE
core/src/: lib.rs
frontend/: README.md  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html  types.ts
frontend/src/components/: ConvertCard.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
pomolib/: Cargo.toml
pomolib/src/: lib.rs
src/: main.rs  types.rs
utils/: Cargo.toml  LICENCE
utils/src/: lib.rs  prelude.rs
web/: Cargo.toml
web/src/: main.rs  types.rs
