[package]
name = "pomolib"
version.workspace = true
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
wasm-bindgen = "0.2.87"
