[package]
name = "web"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
utils = { path = "../utils" }
serde = { version = "1.0.164", features = ["derive"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0.99"
